Kustomize/apps/serviceC/serviceC-cluster-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serviceC
  name: servicec-cluster-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: serviceC
  type: ClusterIP
