Kustomize/apps/serviceC/serviceC-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serviceC
  name: servicec-nodeport-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 32003
  selector:
    app: serviceC
  type: NodePort
